--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Amar-Lahlouh.github.io/Blogs",
+  "homepage": "https://amar-lahlouh.github.io/Blogs",
   "name": "client",
   "private": true,
   "version": "0.0.0",
